# Wire-Harness-Color-Sequence-Detector

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: check_still_img.py  main.py
src/stages/: __init__.py  bg_capture_stage.py  check_stage.py  initialize_stage.py  keys.py  reference_capture_stage.py
src/tasks/: connector.py  display.py  preprocess.py  wire_color.py  wire_roi.py  wires.py
src/tools/: video_stream.py
src/utils/: __init__.py  contour_utils.py  frame_utils.py  rect_utils.py
